--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">HQ</h5>
-        <p> SuperAwesomeDesigns Ltd</p>
-        <p>Louisiana, Yellawolf Drive 2131</p>
-            <p>alwayswritemoreemails@email.com</p>
-            <p>(41) 4587-54203</p>
+        <p> SuperAwesomeDesigns Ltd<br>
+        Louisiana, Yellawolf Drive 2131<br>
+         alwayswritemoreemails@email.com<br>
+          (41) 4587-54203</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Follow us</h5>
